--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>404 - Pranay Gupta</title>
+  <title>404 - Akash Gupta</title>
   <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
 </head>
 
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav_logo">Pranay</a>
+      <a href="#" class="nav_logo">Akash</a>
 
       <div class="nav_menu" id="nav-menu">
         <ul class="nav_list grid">
@@ -87,8 +87,8 @@
     <div class="footer_bg">
       <div class="footer_container container grid">
         <div>
-          <h1 class="footer_title">Pranay Gupta</h1>
-          <span class="footer_subtitle">Frontend Developer</span>
+          <h1 class="footer_title">Akash Gupta</h1>
+          <span class="footer_subtitle">Full Stack Developer</span>
         </div>
 
         <ul class="footer_links">
@@ -104,19 +104,16 @@
         </ul>
 
         <div class="footer_socials">
-          <a href="https://www.linkedin.com/in/thepranaygupta/" target="_blank" class="footer_social">
+          <a href="https://www.linkedin.com/in/akash-gupta-1909/" target="_blank" class="footer_social">
             <i class="uil uil-linkedin-alt"></i>
           </a>
-          <a href="https://twitter.com/ThePranayGupta/" target="_blank" class="footer_social">
-            <i class="uil uil-twitter-alt"></i>
-          </a>
-          <a href="https://www.instagram.com/pranayguptaa/" target="_blank" class="footer_social">
+          <a href="https://www.instagram.com/akash_gupta_1.9/" target="_blank" class="footer_social">
             <i class="uil uil-instagram"></i>
           </a>
         </div>
       </div>
 
-      <p class="footer_copy">&#169; Pranay Gupta. All rights reserved</p>
+      <p class="footer_copy">&#169; Akash Gupta. All rights reserved</p>
     </div>
   </footer>
 
