--- a/index.html
+++ b/index.html
@@ -5,27 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon"
-    href="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png"
-    type="image/webp">
-  <link rel="icon" href="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png"
-    type="image/webp">
+
   <meta name="description"
-    content="I am a 3rd year undergraduate pursuing IPG-M.Tech degree at IIIT Gwalior. My interest lies in Problem Solving which I utilise to build web applications." />
+    content="I am a final year undergraduate pursuing IPG-M.Tech degree at IIIT Gwalior. My interest lies in Problem Solving which I utilise to build web applications." />
   <meta property="og:title" content="Akash Gupta" />
-  <meta property="og:url" content="https://thepranaygupta.github.io/" />
+  <meta property="og:url" content="https://akashgupta1909.github.io/" />
   <meta property="og:description"
-    content="I am a 3rd year undergraduate pursuing IPG-M.Tech degree at IIIT Gwalior. My interest lies in Problem Solving which I utilise to build web applications." />
-  <meta property="og:image:secure_url"
-    content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
-  <meta property="og:image"
-    content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
+    content="I am a final year undergraduate pursuing IPG-M.Tech degree at IIIT Gwalior. My interest lies in Problem Solving which I utilise to build web applications." />
   <meta property="profile:username" content="theakashgupta" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Akash Gupta" />
-  <meta name="twitter:image"
-    content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
-  <meta name="twitter:url" content="https://thepranaygupta.github.io/" />
+  <meta name="twitter:url" content="https://akashgupta1909.github.io/" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
   <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
@@ -134,7 +124,7 @@
             <h3 class="home_subtitle">I am <span class="type"></span></h3>
 
             <p class="home_description">
-              SWE Intern @KoinX | Former SWE Intern @MuxEmail & @Levo | IIIT Gwalior'25
+              SWE Intern @KoinX | Former SWE Intern @Coinbase @MuxEmail & @Levo | IIIT Gwalior'25
             </p>
             <a href="#contact" class="button button--flex">
               Contact Me
@@ -168,7 +158,7 @@
             games when I'm not designing and building applications.
           </p>
           <div class="about_button">
-            <a download="" href="./Akash Gupta IIIT-G Resume.pdf" class="button button--flex" target="_blank">
+            <a download="" href="./Akash Gupta Resume IIIT Gwalior.pdf" class="button button--flex" target="_blank">
               Resume<i class="uil uil-file-download-alt button_icon"></i>
             </a>
           </div>
@@ -234,6 +224,16 @@
                   <i class="fab fa-js-square"></i>
                 </span>
                 <h3 class="skills_name">JavaScript</h3>
+              </div>
+              <div class="skills_bar"></div>
+            </div>
+
+            <div class="skills_data">
+              <div class="skills_titles">
+                <span class="single_skill_icon">
+                  <i class="fab fa-js-square"></i>
+                </span>
+                <h3 class="skills_name">TypeScript</h3>
               </div>
               <div class="skills_bar"></div>
             </div>
@@ -371,6 +371,16 @@
                   <i class="fab fa-bootstrap"></i>
                 </span>
                 <h3 class="skills_name">Bootstrap</h3>
+              </div>
+              <div class="skills_bar"></div>
+            </div>
+
+            <div class="skills_data">
+              <div class="skills_titles">
+                <span class="single_skill_icon">
+                  <i class="fas fa-project-diagram"></i>
+                </span>
+                <h3 class="skills_name">GraphQL</h3>
               </div>
               <div class="skills_bar"></div>
             </div>
